@@ -74,7 +74,8 @@ Changes in current version:
  o expose bufferevent_setwatermark via header files and fix high watermark on read
  o fix a bug in buffrevent read water marks and add a test for them
  o fix a bug in which bufferevent_write_buffer would not schedule a write event
-
+ o provide bufferevent_input and bufferevent_output without requiring knowledge of the structure
+	
 Changes in 1.4.0:
  o allow \r or \n individually to separate HTTP headers instead of the standard "\r\n"; from Charles Kerr.
  o demote most http warnings to debug messages
